temp switch to autoincrementing ids

--- a/example/Database (SQL) Creation.ipynb
+++ b/example/Database (SQL) Creation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,220 +36,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'flatBuffer': Column(None, LargeBinary(), table=None)}\n",
-      "{'id': Column(None, String(), table=None, primary_key=True, nullable=False)}\n",
-      "2020-01-20 20:17:24,528 INFO sqlalchemy.engine.base.Engine select version()\n",
-      "2020-01-20 20:17:24,529 INFO sqlalchemy.engine.base.Engine {}\n",
-      "2020-01-20 20:17:24,531 INFO sqlalchemy.engine.base.Engine select current_schema()\n",
-      "2020-01-20 20:17:24,532 INFO sqlalchemy.engine.base.Engine {}\n",
-      "2020-01-20 20:17:24,534 INFO sqlalchemy.engine.base.Engine SELECT CAST('test plain returns' AS VARCHAR(60)) AS anon_1\n",
-      "2020-01-20 20:17:24,535 INFO sqlalchemy.engine.base.Engine {}\n",
-      "2020-01-20 20:17:24,537 INFO sqlalchemy.engine.base.Engine SELECT CAST('test unicode returns' AS VARCHAR(60)) AS anon_1\n",
-      "2020-01-20 20:17:24,538 INFO sqlalchemy.engine.base.Engine {}\n",
-      "2020-01-20 20:17:24,540 INFO sqlalchemy.engine.base.Engine show standard_conforming_strings\n",
-      "2020-01-20 20:17:24,541 INFO sqlalchemy.engine.base.Engine {}\n",
-      "2020-01-20 20:17:24,544 INFO sqlalchemy.engine.base.Engine select relname from pg_class c join pg_namespace n on n.oid=c.relnamespace where pg_catalog.pg_table_is_visible(c.oid) and relname=%(name)s\n",
-      "2020-01-20 20:17:24,545 INFO sqlalchemy.engine.base.Engine {'name': 'experiments'}\n",
-      "2020-01-20 20:17:24,548 INFO sqlalchemy.engine.base.Engine \n",
-      "CREATE TABLE experiments (\n",
-      "\t\"flatBuffer\" BYTEA, \n",
-      "\tid VARCHAR NOT NULL, \n",
-      "\tPRIMARY KEY (id)\n",
-      ")\n",
-      "\n",
-      "\n",
-      "2020-01-20 20:17:24,549 INFO sqlalchemy.engine.base.Engine {}\n",
-      "2020-01-20 20:17:24,554 INFO sqlalchemy.engine.base.Engine COMMIT\n",
-      "{'experiment_id': Column(None, String(), ForeignKey('experiments.id'), table=None), 'flatBuffer': Column(None, LargeBinary(), table=None)}\n",
-      "{'id': Column(None, String(), table=None, primary_key=True, nullable=False)}\n",
-      "2020-01-20 20:17:24,559 INFO sqlalchemy.engine.base.Engine select relname from pg_class c join pg_namespace n on n.oid=c.relnamespace where pg_catalog.pg_table_is_visible(c.oid) and relname=%(name)s\n",
-      "2020-01-20 20:17:24,560 INFO sqlalchemy.engine.base.Engine {'name': 'experiments'}\n",
-      "2020-01-20 20:17:24,562 INFO sqlalchemy.engine.base.Engine select relname from pg_class c join pg_namespace n on n.oid=c.relnamespace where pg_catalog.pg_table_is_visible(c.oid) and relname=%(name)s\n",
-      "2020-01-20 20:17:24,563 INFO sqlalchemy.engine.base.Engine {'name': 'daq_systems'}\n",
-      "2020-01-20 20:17:24,565 INFO sqlalchemy.engine.base.Engine \n",
-      "CREATE TABLE daq_systems (\n",
-      "\texperiment_id VARCHAR, \n",
-      "\t\"flatBuffer\" BYTEA, \n",
-      "\tid VARCHAR NOT NULL, \n",
-      "\tPRIMARY KEY (id), \n",
-      "\tFOREIGN KEY(experiment_id) REFERENCES experiments (id)\n",
-      ")\n",
-      "\n",
-      "\n",
-      "2020-01-20 20:17:24,566 INFO sqlalchemy.engine.base.Engine {}\n",
-      "2020-01-20 20:17:24,571 INFO sqlalchemy.engine.base.Engine COMMIT\n",
-      "{'daq_system_id': Column(None, String(), ForeignKey('daq_systems.id'), table=None), 'flatBuffer': Column(None, LargeBinary(), table=None)}\n",
-      "{'id': Column(None, String(), table=None, primary_key=True, nullable=False)}\n",
-      "2020-01-20 20:17:24,576 INFO sqlalchemy.engine.base.Engine select relname from pg_class c join pg_namespace n on n.oid=c.relnamespace where pg_catalog.pg_table_is_visible(c.oid) and relname=%(name)s\n",
-      "2020-01-20 20:17:24,577 INFO sqlalchemy.engine.base.Engine {'name': 'experiments'}\n",
-      "2020-01-20 20:17:24,579 INFO sqlalchemy.engine.base.Engine select relname from pg_class c join pg_namespace n on n.oid=c.relnamespace where pg_catalog.pg_table_is_visible(c.oid) and relname=%(name)s\n",
-      "2020-01-20 20:17:24,580 INFO sqlalchemy.engine.base.Engine {'name': 'daq_systems'}\n",
-      "2020-01-20 20:17:24,582 INFO sqlalchemy.engine.base.Engine select relname from pg_class c join pg_namespace n on n.oid=c.relnamespace where pg_catalog.pg_table_is_visible(c.oid) and relname=%(name)s\n",
-      "2020-01-20 20:17:24,582 INFO sqlalchemy.engine.base.Engine {'name': 'epochs'}\n",
-      "2020-01-20 20:17:24,584 INFO sqlalchemy.engine.base.Engine \n",
-      "CREATE TABLE epochs (\n",
-      "\tdaq_system_id VARCHAR, \n",
-      "\t\"flatBuffer\" BYTEA, \n",
-      "\tid VARCHAR NOT NULL, \n",
-      "\tPRIMARY KEY (id), \n",
-      "\tFOREIGN KEY(daq_system_id) REFERENCES daq_systems (id)\n",
-      ")\n",
-      "\n",
-      "\n",
-      "2020-01-20 20:17:24,585 INFO sqlalchemy.engine.base.Engine {}\n",
-      "2020-01-20 20:17:24,590 INFO sqlalchemy.engine.base.Engine COMMIT\n",
-      "{'daq_system_id': Column(None, String(), ForeignKey('daq_systems.id'), table=None), 'flatBuffer': Column(None, LargeBinary(), table=None)}\n",
-      "{'id': Column(None, String(), table=None, primary_key=True, nullable=False)}\n",
-      "2020-01-20 20:17:24,594 INFO sqlalchemy.engine.base.Engine select relname from pg_class c join pg_namespace n on n.oid=c.relnamespace where pg_catalog.pg_table_is_visible(c.oid) and relname=%(name)s\n",
-      "2020-01-20 20:17:24,595 INFO sqlalchemy.engine.base.Engine {'name': 'experiments'}\n",
-      "2020-01-20 20:17:24,597 INFO sqlalchemy.engine.base.Engine select relname from pg_class c join pg_namespace n on n.oid=c.relnamespace where pg_catalog.pg_table_is_visible(c.oid) and relname=%(name)s\n",
-      "2020-01-20 20:17:24,598 INFO sqlalchemy.engine.base.Engine {'name': 'daq_systems'}\n",
-      "2020-01-20 20:17:24,600 INFO sqlalchemy.engine.base.Engine select relname from pg_class c join pg_namespace n on n.oid=c.relnamespace where pg_catalog.pg_table_is_visible(c.oid) and relname=%(name)s\n",
-      "2020-01-20 20:17:24,601 INFO sqlalchemy.engine.base.Engine {'name': 'epochs'}\n",
-      "2020-01-20 20:17:24,603 INFO sqlalchemy.engine.base.Engine select relname from pg_class c join pg_namespace n on n.oid=c.relnamespace where pg_catalog.pg_table_is_visible(c.oid) and relname=%(name)s\n",
-      "2020-01-20 20:17:24,604 INFO sqlalchemy.engine.base.Engine {'name': 'probes'}\n",
-      "2020-01-20 20:17:24,606 INFO sqlalchemy.engine.base.Engine \n",
-      "CREATE TABLE probes (\n",
-      "\tdaq_system_id VARCHAR, \n",
-      "\t\"flatBuffer\" BYTEA, \n",
-      "\tid VARCHAR NOT NULL, \n",
-      "\tPRIMARY KEY (id), \n",
-      "\tFOREIGN KEY(daq_system_id) REFERENCES daq_systems (id)\n",
-      ")\n",
-      "\n",
-      "\n",
-      "2020-01-20 20:17:24,607 INFO sqlalchemy.engine.base.Engine {}\n",
-      "2020-01-20 20:17:24,611 INFO sqlalchemy.engine.base.Engine COMMIT\n",
-      "{'probe_id': Column(None, String(), ForeignKey('probes.id'), table=None), 'flatBuffer': Column(None, LargeBinary(), table=None)}\n",
-      "{'id': Column(None, String(), table=None, primary_key=True, nullable=False)}\n",
-      "2020-01-20 20:17:24,615 INFO sqlalchemy.engine.base.Engine select relname from pg_class c join pg_namespace n on n.oid=c.relnamespace where pg_catalog.pg_table_is_visible(c.oid) and relname=%(name)s\n",
-      "2020-01-20 20:17:24,616 INFO sqlalchemy.engine.base.Engine {'name': 'experiments'}\n",
-      "2020-01-20 20:17:24,618 INFO sqlalchemy.engine.base.Engine select relname from pg_class c join pg_namespace n on n.oid=c.relnamespace where pg_catalog.pg_table_is_visible(c.oid) and relname=%(name)s\n",
-      "2020-01-20 20:17:24,619 INFO sqlalchemy.engine.base.Engine {'name': 'daq_systems'}\n",
-      "2020-01-20 20:17:24,621 INFO sqlalchemy.engine.base.Engine select relname from pg_class c join pg_namespace n on n.oid=c.relnamespace where pg_catalog.pg_table_is_visible(c.oid) and relname=%(name)s\n",
-      "2020-01-20 20:17:24,622 INFO sqlalchemy.engine.base.Engine {'name': 'epochs'}\n",
-      "2020-01-20 20:17:24,624 INFO sqlalchemy.engine.base.Engine select relname from pg_class c join pg_namespace n on n.oid=c.relnamespace where pg_catalog.pg_table_is_visible(c.oid) and relname=%(name)s\n",
-      "2020-01-20 20:17:24,625 INFO sqlalchemy.engine.base.Engine {'name': 'probes'}\n",
-      "2020-01-20 20:17:24,626 INFO sqlalchemy.engine.base.Engine select relname from pg_class c join pg_namespace n on n.oid=c.relnamespace where pg_catalog.pg_table_is_visible(c.oid) and relname=%(name)s\n",
-      "2020-01-20 20:17:24,627 INFO sqlalchemy.engine.base.Engine {'name': 'channels'}\n",
-      "2020-01-20 20:17:24,629 INFO sqlalchemy.engine.base.Engine \n",
-      "CREATE TABLE channels (\n",
-      "\tprobe_id VARCHAR, \n",
-      "\t\"flatBuffer\" BYTEA, \n",
-      "\tid VARCHAR NOT NULL, \n",
-      "\tPRIMARY KEY (id), \n",
-      "\tFOREIGN KEY(probe_id) REFERENCES probes (id)\n",
-      ")\n",
-      "\n",
-      "\n",
-      "2020-01-20 20:17:24,630 INFO sqlalchemy.engine.base.Engine {}\n",
-      "2020-01-20 20:17:24,633 INFO sqlalchemy.engine.base.Engine COMMIT\n",
-      "2020-01-20 20:17:24,635 INFO sqlalchemy.engine.base.Engine select relname from pg_class c join pg_namespace n on n.oid=c.relnamespace where pg_catalog.pg_table_is_visible(c.oid) and relname=%(name)s\n",
-      "2020-01-20 20:17:24,636 INFO sqlalchemy.engine.base.Engine {'name': 'experiments'}\n",
-      "2020-01-20 20:17:24,637 INFO sqlalchemy.engine.base.Engine select relname from pg_class c join pg_namespace n on n.oid=c.relnamespace where pg_catalog.pg_table_is_visible(c.oid) and relname=%(name)s\n",
-      "2020-01-20 20:17:24,638 INFO sqlalchemy.engine.base.Engine {'name': 'daq_systems'}\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2020-01-20 20:17:24,640 INFO sqlalchemy.engine.base.Engine select relname from pg_class c join pg_namespace n on n.oid=c.relnamespace where pg_catalog.pg_table_is_visible(c.oid) and relname=%(name)s\n",
-      "2020-01-20 20:17:24,640 INFO sqlalchemy.engine.base.Engine {'name': 'epochs'}\n",
-      "2020-01-20 20:17:24,642 INFO sqlalchemy.engine.base.Engine select relname from pg_class c join pg_namespace n on n.oid=c.relnamespace where pg_catalog.pg_table_is_visible(c.oid) and relname=%(name)s\n",
-      "2020-01-20 20:17:24,643 INFO sqlalchemy.engine.base.Engine {'name': 'probes'}\n",
-      "2020-01-20 20:17:24,644 INFO sqlalchemy.engine.base.Engine select relname from pg_class c join pg_namespace n on n.oid=c.relnamespace where pg_catalog.pg_table_is_visible(c.oid) and relname=%(name)s\n",
-      "2020-01-20 20:17:24,645 INFO sqlalchemy.engine.base.Engine {'name': 'channels'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "db.create_collections()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'experiments': <class 'ndi.database.sql.experiments'>, 'daq_systems': <class 'ndi.database.sql.daq_systems'>, 'epochs': <class 'ndi.database.sql.epochs'>, 'probes': <class 'ndi.database.sql.probes'>, 'channels': <class 'ndi.database.sql.channels'>}\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(db.tables)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'Example' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                              Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-a97821cb3b73>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Create object using schema defined in table creation\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mexample1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mExample\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'Tommy'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mage\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m144\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34mb'hello'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'Example' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "# Create object using schema defined in table creation\n",
-    "example1 = Example(name='Tommy', age=144, data=b'hello')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Add object to database\n",
-    "db.add(example1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Search table in database based on query\n",
-    "results = db.find(Example, name='Tommy')\n",
-    "for result in results:\n",
-    "    print(result.id)\n",
-    "    print(result.name)\n",
-    "    print(result.age)\n",
-    "    print(result.data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "results = db.find(Example, age=144)\n",
-    "for result in results:\n",
-    "    print(result.id)\n",
-    "    print(result.name)\n",
-    "    print(result.age)\n",
-    "    print(result.data)"
    ]
   },
   {
@@ -257,7 +48,44 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for table in db.get_tables():\n",
+    "    print(table.name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create object using schema defined in table creation\n",
+    "Experiment = db.tables.get('experiments')\n",
+    "experiment1 = Experiment(flat_buffer=b'hello')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add object to database\n",
+    "db.add(experiment1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Search table in database based on query\n",
+    "results = db.find(Experiment, flat_buffer=b'hello')\n",
+    "for result in results:\n",
+    "    print(result.id)\n",
+    "    print(result.flatbuffer)"
+   ]
   },
   {
    "cell_type": "code",
@@ -283,7 +111,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.4-final"
   }
  },
  "nbformat": 4,
