--- a/example/Database (SQL) Creation.ipynb
+++ b/example/Database (SQL) Creation.ipynb
@@ -80,11 +80,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Search table in database based on query\n",
-    "results = db.find(Experiment, flat_buffer=b'hello')\n",
-    "for result in results:\n",
-    "    print(result.id)\n",
-    "    print(result.flatbuffer)"
+    "db.add(Experiment(flat_buffer=b'new world'))"
    ]
   },
   {
@@ -92,7 +88,61 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Search table in database based on query\n",
+    "def show_experiments(**kwargs):\n",
+    "    with db.find(Experiment, **kwargs) as results:\n",
+    "        experiment_id = 'none'\n",
+    "        for result in results:\n",
+    "            experiment_id = result.id\n",
+    "            print(f'experiment {experiment_id} contains flatbuffer {result.flat_buffer}')\n",
+    "    return experiment_id\n",
+    "\n",
+    "newest_experiment_id = show_experiments()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db.update(Experiment, { 'id': newest_experiment_id }, { 'flat_buffer': b'goodbye' })\n",
+    "\n",
+    "show_experiments()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "show_experiments(flat_buffer=b'goodbye')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db.delete(Experiment, id=newest_experiment_id)\n",
+    "\n",
+    "show_experiments()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with db.find(Experiment, flat_buffer=b'hello') as results:\n",
+    "    for result in results:\n",
+    "        new_experiment_id = result.id\n",
+    "        print(f'experiment {new_experiment_id} contains flatbuffer {result.flat_buffer}')"
+   ]
   }
  ],
  "metadata": {
