add upsert method

--- a/example/Database (SQL) Creation.ipynb
+++ b/example/Database (SQL) Creation.ipynb
@@ -92,13 +92,14 @@
     "# Search table in database based on query\n",
     "def show_experiments(**kwargs):\n",
     "    with db.find(Experiment, **kwargs) as results:\n",
-    "        experiment_id = 'none'\n",
+    "        experiment_id = []\n",
     "        for result in results:\n",
-    "            experiment_id = result.id\n",
-    "            print(f'experiment {experiment_id} contains flatbuffer {result.flat_buffer}')\n",
+    "            experiment_id.append(result.id)\n",
+    "            print(f'{result.id}: {result.flat_buffer}')\n",
     "    return experiment_id\n",
     "\n",
-    "newest_experiment_id = show_experiments()"
+    "experiment_ids = show_experiments()\n",
+    "newest_experiment_id = experiment_ids[-1]"
    ]
   },
   {
@@ -107,6 +108,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "db.add([\n",
+    "    Experiment(flat_buffer=b'AAAAA'),\n",
+    "    Experiment(flat_buffer=b'BBBBB'),\n",
+    "    Experiment(flat_buffer=b'CCCCC'),\n",
+    "])\n",
+    "\n",
+    "show_experiments()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f'updating experiment {newest_experiment_id}')\n",
     "db.update(Experiment, { 'id': newest_experiment_id }, { 'flat_buffer': b'goodbye' })\n",
     "\n",
     "show_experiments()"
@@ -127,6 +144,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "print(f'deleting experiment {newest_experiment_id}')\n",
     "db.delete(Experiment, id=newest_experiment_id)\n",
     "\n",
     "show_experiments()"
@@ -138,10 +156,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with db.find(Experiment, flat_buffer=b'hello') as results:\n",
-    "    for result in results:\n",
-    "        new_experiment_id = result.id\n",
-    "        print(f'experiment {new_experiment_id} contains flatbuffer {result.flat_buffer}')"
+    "print(f'upserting experiment {experiment_ids[-2]}')\n",
+    "db.upsert(Experiment, { 'id': experiment_ids[-2] }, { 'flat_buffer': b'upserted (update)' })\n",
+    "\n",
+    "show_experiments()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db.delete(Experiment, id=experiment_ids[-2])\n",
+    "\n",
+    "show_experiments()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f'upserting experiment {experiment_ids[-2]}')\n",
+    "db.upsert(Experiment, { 'id': experiment_ids[-2] }, { 'flat_buffer': b'upserted (add)' })\n",
+    "\n",
+    "show_experiments()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db.delete_all(Experiment)\n",
+    "\n",
+    "show_experiments()"
    ]
   }
  ],
