added delete method, added dummy experiment folder

--- a/example/FileSystem_Database_Demo.ipynb
+++ b/example/FileSystem_Database_Demo.ipynb
@@ -111,15 +111,7 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.experiment.Experiment at 0x116f77f90>,\n",
-       " <ndi.experiment.Experiment at 0x116f7f390>,\n",
-       " <ndi.experiment.Experiment at 0x116f7f6d0>,\n",
-       " <ndi.experiment.Experiment at 0x116f7f7d0>,\n",
-       " <ndi.experiment.Experiment at 0x116f7f790>,\n",
-       " <ndi.experiment.Experiment at 0x116f7f290>,\n",
-       " <ndi.experiment.Experiment at 0x116f7f0d0>,\n",
-       " <ndi.experiment.Experiment at 0x116f7fb10>,\n",
-       " <ndi.experiment.Experiment at 0x116f7fb90>]"
+       "True"
       ]
      },
      "execution_count": 10,
@@ -128,7 +120,7 @@
     }
    ],
    "source": [
-    "db.find(Experiment, name='myExperiment')"
+    "e2 == db.find(Experiment, name='myExperiment3')[0]"
    ]
   },
   {
@@ -139,11 +131,7 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.experiment.Experiment at 0x116f7fed0>,\n",
-       " <ndi.experiment.Experiment at 0x116f9c0d0>,\n",
-       " <ndi.experiment.Experiment at 0x116f9c250>,\n",
-       " <ndi.experiment.Experiment at 0x116f9c2d0>,\n",
-       " <ndi.experiment.Experiment at 0x116f9c3d0>]"
+       "[]"
       ]
      },
      "execution_count": 11,
@@ -183,6 +171,108 @@
    "source": [
     "e.daqsystems[0] == ds_results[0]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<ndi.experiment.Experiment at 0x10a007350>]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "db.find(Experiment)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "78781787622c4846a53fe0daac895b0d\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(e.id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db.delete_by_id(Experiment, e.id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File not found\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    db.find_by_id(Experiment, e.id)\n",
+    "except FileNotFoundError:\n",
+    "    print('File not found')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db.delete(Experiment)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "db.find(Experiment)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
