--- a/example/Database (SQL) Creation.ipynb
+++ b/example/Database (SQL) Creation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,18 +36,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "db.create_collections()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "experiments\n",
+      "daq_systems\n",
+      "epochs\n",
+      "probes\n",
+      "channels\n"
+     ]
+    }
+   ],
    "source": [
     "for table in db.get_tables():\n",
     "    print(table.name)"
@@ -55,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,9 +88,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "69: b'hello'\n",
+      "70: b'new world'\n"
+     ]
+    }
+   ],
    "source": [
     "# Search table in database based on query\n",
     "def show_experiments(**kwargs):\n",
@@ -104,9 +116,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "69: b'hello'\n",
+      "70: b'new world'\n",
+      "71: b'AAAAA'\n",
+      "72: b'BBBBB'\n",
+      "73: b'CCCCC'\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[69, 70, 71, 72, 73]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "db.add([\n",
     "    Experiment(flat_buffer=b'AAAAA'),\n",
@@ -119,9 +153,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "updating experiment 70\n",
+      "69: b'hello'\n",
+      "71: b'AAAAA'\n",
+      "72: b'BBBBB'\n",
+      "73: b'CCCCC'\n",
+      "70: b'goodbye'\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[69, 71, 72, 73, 70]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "print(f'updating experiment {newest_experiment_id}')\n",
     "db.update(Experiment, { 'id': newest_experiment_id }, { 'flat_buffer': b'goodbye' })\n",
@@ -131,30 +188,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "70: b'goodbye'\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[70]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "show_experiments(flat_buffer=b'goodbye')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "deleting experiment 70\n",
+      "69: b'hello'\n",
+      "71: b'AAAAA'\n",
+      "72: b'BBBBB'\n",
+      "73: b'CCCCC'\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[69, 71, 72, 73]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "print(f'deleting experiment {newest_experiment_id}')\n",
-    "db.delete(Experiment, id=newest_experiment_id)\n",
+    "db.delete_by_id(Experiment, newest_experiment_id)\n",
     "\n",
     "show_experiments()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "upserting experiment 69\n",
+      "71: b'AAAAA'\n",
+      "72: b'BBBBB'\n",
+      "73: b'CCCCC'\n",
+      "69: b'upserted (update)'\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[71, 72, 73, 69]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "print(f'upserting experiment {experiment_ids[-2]}')\n",
     "db.upsert(Experiment, { 'id': experiment_ids[-2] }, { 'flat_buffer': b'upserted (update)' })\n",
@@ -164,9 +283,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "71: b'AAAAA'\n",
+      "72: b'BBBBB'\n",
+      "73: b'CCCCC'\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[71, 72, 73]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "db.delete(Experiment, id=experiment_ids[-2])\n",
     "\n",
@@ -175,9 +314,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "upserting experiment 69\n",
+      "71: b'AAAAA'\n",
+      "72: b'BBBBB'\n",
+      "73: b'CCCCC'\n",
+      "74: b'upserted (add)'\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[71, 72, 73, 74]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "print(f'upserting experiment {experiment_ids[-2]}')\n",
     "db.upsert(Experiment, { 'id': experiment_ids[-2] }, { 'flat_buffer': b'upserted (add)' })\n",
@@ -187,9 +348,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "db.delete_all(Experiment)\n",
     "\n",
@@ -213,7 +385,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4-final"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
